apps/base/media/shelfmark/shelfmark-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shelfmark-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://shelfmark.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Shelfmark"
    gethomepage.dev/description: "Book search and request tool"
    gethomepage.dev/app: shelfmark
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/calibre.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`shelfmark.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: shelfmark
          port: 8084
  tls: {}
